# blender-mcp-improved

./: .pre-commit-config.yaml  CONTRIBUTING.md  INSTALL.md  Makefile  addon.py  addon_modular.py  pyproject.toml  quickstart.sh  setup.sh
blender_addon/: __init__.py  handlers.py  properties.py  server.py  ui.py
blender_addon/integrations/: __init__.py  hunyuan3d.py  hyper3d.py  polyhaven.py  sketchfab.py
examples/: README.md  demo_mcp_usage.py
scripts/: blender_mcp_complete.py  build_addon.py  build_addon.sh  sync_version.py
src/blender_mcp/: server.py
tests/: __init__.py  conftest.py  run_all_tests.sh  test_config.py  test_manual_integration.py  test_server.py  test_simulation.py  test_telemetry.py
